--- a/cros/dts/chromeos-efi.dtsi
+++ b/cros/dts/chromeos-efi.dtsi
@@ -19,6 +19,8 @@
 	chromeos-config {
 		compatible = "chromeos-config";
 		tpm-optional;
+		disable-firmware-jump;
+		disable-memwipe;
 		kernel-addr = /bits/ 64 <0x00100000 0x2000000>;
 	};
 
