--- a/configs/chromeos_efi-x86_app32_defconfig
+++ b/configs/chromeos_efi-x86_app32_defconfig
@@ -44,10 +44,11 @@ CONFIG_LOG_ERROR_RETURN=y
 # CONFIG_CMD_SF_TEST is not set
 CONFIG_DM_ETH=y
 CONFIG_LOGF_FUNC=y
-CONFIG_BLOBLIST_SIZE=0x18000
+CONFIG_BLOBLIST_SIZE=0x80
 CONFIG_BLOBLIST_SIZE_RELOC=0x18000
 CONFIG_FWSTORE_FS=y
 # CONFIG_CROS_EC is not set
 CONFIG_NVDATA_FS=y
 CONFIG_FAT_WRITE=y
 CONFIG_MISC=y
+CONFIG_BLOBLIST_ALLOC=y
