WIP: cros: Updates to support EFI
When booting as an EFI app some changes are needed to how the Chrome OS
boot works:

- there is only one app, so true verified boot cannot be supported at
  present. That would require launching multiple apps during the vboot. It
  should be easy enough to support but is not included here

- there is no need to jump from one binary to the next, since there is
  only one app

Also some extra pieces are required:

- storing nvdata, secdata, etc. in a FAT filesystem (for example) so that
  verified boot has access to what it needs
- storing the firmware image in a FAT filesystem (for example) so that the
  required keys are available for normal mode. This image is also needed
  for developer-mode and recovery screens to work
- there is no need to jump to a different firmware binary since there is
  only one
- we need to support not having a TPM
- we need to support not have a Chromium OS EC

The stage terminology here is now a little odd for EFI:

vern_xxx.c - (n=1 to 6) runs the verification stage
spl_xxx.c  - runs the memory-init stage, which does nothing in EFI
rw_xxx.c   - runs the U-Boot stage, which boots the kernel and presents
             the UI, if enabled.

All of these stages run one after the other within the same EFI
executable.

Signed-off-by: Simon Glass <sjg@chromium.org>

--- a/cros/dts/flashmap-sandbox-ro.dtsi
+++ b/cros/dts/flashmap-sandbox-ro.dtsi
@@ -17,6 +17,7 @@
 			type = "section";
 			label-prefix = "ro-";
 			read-only;
+			align = <0x1000>;
 
 			cros-ec-rw {
 				filename = "ec-rw.bin";
