cros: efi: Create a build for an EFI app wtih Chrome OS vboot
Add a new build which does a Chromium OS verified boot running as an EFI
app under UEFI.

This is generic in that it does not require any device support beyond that
provided by the host UEFI.

Signed-off-by: Simon Glass <sjg@chromium.org>

--- a/board/efi/efi-x86_app/Kconfig
+++ b/board/efi/efi-x86_app/Kconfig
@@ -10,10 +10,24 @@ config SYS_SOC
 	default "efi"
 
 config SYS_CONFIG_NAME
-	default "efi-x86_app"
+	default "efi-x86_app" if !TARGET_CHROMEOS_EFI_APP32
 
 config BOARD_SPECIFIC_OPTIONS # dummy
 	def_bool y
 	imply VIDEO_EFI
+	imply BINMAN
+
+endif
+
+if TARGET_CHROMEOS_EFI_APP32
+
+config SYS_CONFIG_NAME
+	default "chromeos_efi-x86_app"
+
+config BOARD_SPECIFIC_OPTIONS # dummy
+	def_bool y
+	imply CHROMEOS_VBOOT_A
+	imply CHROMEOS_VBOOT_B
+	imply CHROMEOS_VBOOT_C
 
 endif
