--- a/drivers/core/Kconfig
+++ b/drivers/core/Kconfig
@@ -448,6 +448,11 @@ config ACPIGEN
 	  things like generating device-specific tables and returning the ACPI
 	  name of a device.
 
+config SPL_ACPIGEN
+	def_bool n
+	help
+	  Dummy option to ensure that ACPI tables are not generated in SPL.
+
 config BOUNCE_BUFFER
 	bool "Include bounce buffer API"
 	help
