power: Add SPL Kconfig for sandbox pmc emulator
At present we rely on this not existing to avoid building the emulator for
SPL.

But with the new split configs this does not work. Add a separate Kconfig
instead.

Signed-off-by: Simon Glass <sjg@chromium.org>

--- a/drivers/power/acpi_pmc/Kconfig
+++ b/drivers/power/acpi_pmc/Kconfig
@@ -34,3 +34,8 @@ config ACPI_PMC_SANDBOX
 	  the uclass logic can be tested. You can use the 'pmc' command to
 	  access information from the driver. It uses I/O access to read
 	  from the PMC.
+
+config SPL_ACPI_PMC_SANDBOX
+	def_bool n
+	help
+	  Dummy option to ensure that this feature is not enabled in SPL.
