bootflow: Add an implementation of distro PXE boot
Add a bootmeth driver which handles distro boot from a network device, so
we can boot a bootflow using this commonly used mechanism.

In effect, this provides the same functionality as the 'pxe' command
and shares the same code. But the interface into it is via a bootmeth.

For now this requires the 'pxe' command be enabled. Future work may tidy
this up so that it can be used without CONFIG_CMDLINE being enabled.

Signed-off-by: Simon Glass <sjg@chromium.org>

--- a/boot/Kconfig
+++ b/boot/Kconfig
@@ -294,6 +294,16 @@ config BOOTDEV_DISTRO
 
 	  This provides a way to try out bootdev on an existing boot flow.
 
+config BOOTDEV_PXE
+	bool "Bootdevice support for distro boot over network"
+	depends on BOOTDEV && CMD_PXE && NET && DM_ETH
+	default y
+	help
+	  Enables support for distro boot using bootdevs. This makes the
+	  bootdevs look for a 'extlinux/extlinux.conf' on the tftp server.
+
+	  This provides a way to try out bootdev on an existing boot flow.
+
 config LEGACY_IMAGE_FORMAT
 	bool "Enable support for the legacy image format"
 	default y if !FIT_SIGNATURE
