bootstd: Add a sandbox bootmeth driver
Add a bootmeth driver for sandbox, used for testing.

Series-changes: 3
- Add a log category

Signed-off-by: Simon Glass <sjg@chromium.org>

--- a/boot/Kconfig
+++ b/boot/Kconfig
@@ -370,6 +370,13 @@ config BOOTMETH_EFILOADER
 
 	  This provides a way to try out standard boot on an existing boot flow.
 
+config BOOTMETH_SANDBOX
+	def_bool y
+	depends on SANDBOX
+	help
+	  This is a sandbox bootmeth driver used for testing. It always returns
+	  -ENOTSUPP when attempting to boot.
+
 endif
 
 config LEGACY_IMAGE_FORMAT
