--- a/arch/sandbox/dts/test.dts
+++ b/arch/sandbox/dts/test.dts
@@ -71,8 +71,11 @@
 		};
 	};
 
-	bootmeths {
-		compatible = "simple-bus";
+	bootstd {
+		compatible = "u-boot,boot-standard";
+
+		filename-prefixes = "/", "/boot/";
+		bootmeth-order = "mmc2", "mmc1";
 
 		syslinux {
 			compatible = "u-boot,distro-syslinux";
