--- a/boot/Makefile
+++ b/boot/Makefile
@@ -24,7 +24,7 @@ obj-$(CONFIG_ANDROID_AB) += android_ab.o
 obj-$(CONFIG_ANDROID_BOOT_IMAGE) += image-android.o image-android-dt.o
 obj-$(CONFIG_$(SPL_TPL_)BOOTDEV) += bootdev.o bootdev-uclass.o
 obj-$(CONFIG_$(SPL_TPL_)BOOTDEV) += bootflow.o
-obj-$(CONFIG_$(SPL_TPL_)BOOTDEV) += bootmeth-uclass.o
+obj-$(CONFIG_$(SPL_TPL_)BOOTDEV) += bootmeth-uclass.o bootstd-uclass.o
 obj-$(CONFIG_$(SPL_TPL_)BOOTDEV_DISTRO) += bootmeth_distro.o
 obj-$(CONFIG_$(SPL_TPL_)BOOTDEV_DISTRO_PXE) += bootmeth_pxe.o
 obj-$(CONFIG_$(SPL_TPL_)BOOTDEV_EFILOADER) += bootmeth_efi.o
