--- a/tools/labman/kea_lab.yaml
+++ b/tools/labman/kea_lab.yaml
@@ -207,6 +207,46 @@ hubs:
       port16: &hube_16
         port-number: 1.4
 
+  hubf: &hubf
+    kernel-phys-port: 1-2
+    num-ports: 16
+    ports:
+      port1: &hubf_1
+        port-number: 1.1
+      port2: &hubf_2
+        port-number: 1.2
+      port3: &hubf_3
+        port-number: 1.3
+      port4: &hubf_4
+        port-number: 1.4
+
+      port5: &hubf_5
+        port-number: 2.1
+      port6: &hubf_6
+        port-number: 2.2
+      port7: &hubf_7
+        port-number: 2.3
+      port8: &hubf_8
+        port-number: 2.4
+
+      port9: &hubf_9
+        port-number: 3.1
+      port10: &hubf_10
+        port-number: 3.2
+      port11: &hubf_11
+        port-number: 3.3
+      port12: &hubf_12
+        port-number: 3.4
+
+      port13: &hubf_13
+        port-number: 4.1
+      port14: &hubf_14
+        port-number: 4.2
+      port15: &hubf_15
+        port-number: 4.3
+      port16: &hubf_16
+        port-number: 4.4
+
 dlis:
   dli1: &dli_main
     hostname: 192.168.4.19
@@ -397,7 +437,7 @@ sdwires:
   sdwire16: &sdwire16
     serial: da62
     symlink: sdwire16
-    hub-port: *hubd_7
+    hub-port: *hubf_3
     mount-uuid: CC94-AA32
     mount-point: bbb_boot
 
@@ -619,11 +659,11 @@ uarts:
   usbport20: &ttyusb_port20
     type: usb-uart
     symlink: ttyusb_port20
-    hub-port: *hubd_6
+    hub-port: *hubf_1
   usbport21: &ttyusb_port21
     type: usb-uart
     symlink: ttyusb_port21
-    hub-port: *hubd_8
+    hub-port: *hubf_2
   portserver1: &portserver1
     type: portserver
     host: 192.168.4.23
