--- a/arch/sandbox/dts/test.dts
+++ b/arch/sandbox/dts/test.dts
@@ -84,6 +84,10 @@
 		efi {
 			compatible = "u-boot,distro-efi";
 		};
+
+		bootmgr {
+			compatible = "u-boot,efi-bootmgr";
+		};
 	};
 
 	reboot-mode0 {
