--- a/arch/arm/dts/bcm2837-rpi-3-b.dts
+++ b/arch/arm/dts/bcm2837-rpi-3-b.dts
@@ -30,10 +30,9 @@
 	};
 
 	bootstd {
-		compatible = "u-boot,boot-standard";
+		compatible = "u-boot,boot-std";
 
 		filename-prefixes = "/", "/boot/";
-		bootmeth-order = "mmc2", "mmc1";
 
 		syslinux {
 			compatible = "u-boot,distro-syslinux";
