--- a/drivers/usb/host/Makefile
+++ b/drivers/usb/host/Makefile
@@ -9,7 +9,7 @@ obj-$(CONFIG_SANDBOX) += usb-sandbox.o
 endif
 
 ifdef CONFIG_$(SPL_TPL_)USB_STORAGE
-obj-$(CONFIG_$(SPL_TPL_)BOOTDEV) += usb_bootdev.o
+obj-$(CONFIG_$(SPL_TPL_)BOOTSTD) += usb_bootdev.o
 endif
 
 # ohci
