--- a/drivers/mmc/Makefile
+++ b/drivers/mmc/Makefile
@@ -7,7 +7,7 @@ obj-y += mmc.o
 obj-$(CONFIG_$(SPL_)DM_MMC) += mmc-uclass.o
 
 ifdef CONFIG_$(SPL_TPL_)DM_MMC
-obj-$(CONFIG_$(SPL_TPL_)BOOTDEV) += mmc_bootdev.o
+obj-$(CONFIG_$(SPL_TPL_)BOOTSTD) += mmc_bootdev.o
 endif
 
 obj-$(CONFIG_$(SPL_)MMC_WRITE) += mmc_write.o
