--- a/arch/sandbox/dts/test.dts
+++ b/arch/sandbox/dts/test.dts
@@ -75,7 +75,7 @@
 		compatible = "u-boot,boot-std";
 
 		filename-prefixes = "/", "/boot/";
-		bootdev-order = "mmc2", "mmc1", "bootstd";
+		bootdev-order = "mmc2", "mmc1";
 
 		syslinux {
 			compatible = "u-boot,distro-syslinux";
@@ -83,10 +83,6 @@
 
 		efi {
 			compatible = "u-boot,distro-efi";
-		};
-
-		system-bootdev {
-			compatible = "u-boot,bootdev-system";
 		};
 	};
 
