--- a/lib/Kconfig
+++ b/lib/Kconfig
@@ -210,6 +210,11 @@ config GENERATE_ACPI_TABLE
 	  by the operating system. It defines platform-independent interfaces
 	  for configuration and power management monitoring.
 
+config ACPI_PREPROCESS
+	bool "Run the ACPI .asl code through CPP before compiling"
+	depends on GENERATE_ACPI_TABLE
+	default y
+
 config SPL_TINY_MEMSET
 	bool "Use a very small memset() in SPL"
 	help
