--- a/tools/labman/kea_lab.yaml
+++ b/tools/labman/kea_lab.yaml
@@ -1231,7 +1231,7 @@ duts:
         toolchain: i385
 
   bob:
-    desc: Chromebook Bok
+    desc: Chromebook Bob
     console: *servo_bob
     bootdev: *em100_bob
     power: *servo_bob
