x86: Create a Kconfig for the SoC type
At present these files are individually included by the top-level
x86 Kconfig file. It is better to move them into the cpu/ subdirectory.
Create a new Kconfig file for that.

Signed-off-by: Simon Glass <sjg@chromium.org>
Change-Id: I0557a715b6827802931fbe8a3a2b7043404a989f

--- a/arch/x86/Kconfig
+++ b/arch/x86/Kconfig
@@ -105,19 +105,8 @@ source "board/emulation/Kconfig"
 source "board/google/Kconfig"
 source "board/intel/Kconfig"
 
-# platform-specific options below
-source "arch/x86/cpu/apollolake/Kconfig"
-source "arch/x86/cpu/baytrail/Kconfig"
-source "arch/x86/cpu/braswell/Kconfig"
-source "arch/x86/cpu/broadwell/Kconfig"
-source "arch/x86/cpu/coreboot/Kconfig"
-source "arch/x86/cpu/ivybridge/Kconfig"
-source "arch/x86/cpu/efi/Kconfig"
-source "arch/x86/cpu/qemu/Kconfig"
-source "arch/x86/cpu/quark/Kconfig"
-source "arch/x86/cpu/queensbay/Kconfig"
-source "arch/x86/cpu/slimbootloader/Kconfig"
-source "arch/x86/cpu/tangier/Kconfig"
+# include platform-specific options
+source "arch/x86/cpu/Kconfig"
 
 # architecture-specific options below
 
