x86: Create a Kconfig for Intel options
There are quite a few Intel options in the main x86 Kconfig. Move these
to the directory where most of the Intel code is.

Signed-off-by: Simon Glass <sjg@chromium.org>
Change-Id: Ibebe0312424e65becd390ebd4e5505b371b3aec4

--- a/arch/x86/cpu/Kconfig
+++ b/arch/x86/cpu/Kconfig
@@ -13,3 +13,5 @@ source "arch/x86/cpu/quark/Kconfig"
 source "arch/x86/cpu/queensbay/Kconfig"
 source "arch/x86/cpu/slimbootloader/Kconfig"
 source "arch/x86/cpu/tangier/Kconfig"
+
+source "arch/x86/cpu/intel_common/Kconfig"
